# switchAPI

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-02-switchapi-mvp-plan/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-04-m1-data-forwarding/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/07-04-m2-stats-pricing/: implement.jsonl  task.json
.trellis/tasks/07-05-m3-dual-experience/: implement.jsonl  implement.md  task.json
.trellis/tasks/07-08-m4-reliability-migration/: check.jsonl  implement.md  prd.md  task.json
.trellis/workspace/orion/: index.md  journal-1.md
cmd/agent/: main.go
cmd/hub/: main.go
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: agent.rs  config.rs  hub.rs  main.rs  tray.rs
desktop/ui/: index.html  main.js  style.css
docs/: deploy.md
docs/adr/: 0001-single-user-agent-hub-architecture.md  0002-same-format-passthrough.md  0003-sqlite-over-postgres-redis.md  0004-go-react-tauri-stack.md  0005-lan-first-security-posture.md
internal/agent/: doc.go
internal/e2e/: e2e_test.go
internal/hub/: doc.go
scripts/: build_pricing_snapshot.py
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  ws.ts
(+106 files in other folders)
